<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".MenuActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_menu_simple_workout"
                style="?buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginTop="100dp"
                android:text="@string/menu_simple_wokout" />

            <Button
                android:id="@+id/bt_menu_round_workout"
                style="?buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/menu_round_workout" />
            
             <Button
                android:id="@+id/bt_menu_complex_workout"
                style="?buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/menu_complex_workout" />

        </LinearLayout>


</FrameLayout>