<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ws_effort_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ws_effort_time_label"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <NumberPicker
            android:id="@+id/ws_effort_houres"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

        <NumberPicker
            android:id="@+id/ws_effort_minutes"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

        <NumberPicker
            android:id="@+id/ws_effort_seconds"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/ws_pause_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ws_pause_time_label"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <NumberPicker
            android:id="@+id/ws_pause_houres"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

        <NumberPicker
            android:id="@+id/ws_pause_minutes"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

        <NumberPicker
            android:id="@+id/ws_pause_seconds"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
    
     <TextView
        android:id="@+id/ws_rounds_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ws_rounds_label"
        android:textSize="20sp" />
     
      <NumberPicker
            android:id="@+id/ws_rounds"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
     

</LinearLayout>